--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "es6-promise": "^3.2.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.0",
+    "medium-editor": "^5.21.1",
     "react": "^15.2.1",
     "react-bootstrap": "^0.30.2",
     "react-dom": "^15.2.1"
